--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,12 @@ body {
   display: none;
 }
 
-a, input[type="submit"] {
+a,
+input[type="submit"] {
   background-color: #543543;
   color: #fff;
-  padding: 10px 20px;
+  margin: 10px 0;
+  padding: 5px;
   border-radius: 5px;
   text-decoration: none;
   opacity: 0.7;
@@ -23,6 +25,6 @@ a, input[type="submit"] {
 }
 
 a:hover,
-input[type="submit"] {
+input[type="submit"]:hover {
   opacity: 1;
 }
